--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -2,14 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="20dp"
     android:orientation="vertical">
 
     <!--Icons from FlatIcon-->
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sign Up!"
+        android:fontFamily="sans-serif-thin"
+        android:textSize="80sp"
+        android:textStyle="bold"
+        android:textColor="#F51600"
+        android:gravity="center_horizontal" />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp">
         <TextView
@@ -106,6 +117,7 @@
     </RelativeLayout>
 
     <Button
+        android:id="@+id/sign_up_button"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="25dp"
