Removed empty activity, going to replace with map activity

--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:text="HOME SCREEN"
         android:textSize="40sp">
-    </TextView>
+    </TextView>z
 
 </LinearLayout>
