--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical">
 
     <!--Icons from FlatIcon-->
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        android:src="@drawable/logo">
+        android:src="@drawable/white_logo_2">
 
     </ImageView>
     <TextView
@@ -21,14 +22,14 @@
         android:fontFamily="sans-serif-thin"
         android:textSize="80sp"
         android:textStyle="bold"
-        android:textColor="#F51600"
+        android:textColor="#FFFFFF"
         android:gravity="center_horizontal" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sharing and saving - reimagined"
         android:textSize="20sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:gravity="center_horizontal" />
 
     <EditText
@@ -41,13 +42,14 @@
         android:layout_marginRight="50dp"
         android:gravity="center"
         android:hint="Username"
+        android:textColorHint="#aaFFFFFF"
         android:inputType="text"
         android:maxLines="1"
         android:textSize="20sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:paddingStart="10dp"
         android:drawableStart="@drawable/user"
-        android:background="@drawable/text_input_border"/>
+        android:background="#4a000000"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -59,23 +61,23 @@
         android:layout_marginRight="50dp"
         android:gravity="center"
         android:hint="Password"
+        android:textColorHint="#aaFFFFFF"
         android:inputType="textPassword"
         android:maxLines="1"
         android:textSize="20sp"
         android:textColor="#000000"
         android:paddingStart="10dp"
         android:drawableStart="@drawable/lock"
-        android:background="@drawable/text_input_border"/>
+        android:background="#4a000000"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="85dp"
         android:layout_gravity="center"
         android:text="Forgot Password?"
         android:textSize="14sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:gravity="center_horizontal" />
 
     <Button
@@ -87,7 +89,7 @@
         android:layout_marginRight="50dp"
         android:text="LOGIN"
         android:textColor="#ffffff"
-        android:background="@drawable/button_border">
+        android:background="#4a000000">
     </Button>
 
     <RelativeLayout
@@ -101,7 +103,7 @@
             android:layout_height="wrap_content"
             android:text="Don't have an account?"
             android:textSize="14sp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:gravity="center_horizontal" />
         <TextView
             android:id="@+id/sign_up_text_link"
@@ -111,7 +113,7 @@
             android:layout_marginLeft="30dp"
             android:text="Sign Up"
             android:textSize="14sp"
-            android:textColor="#F51600"
+            android:textColor="#FFFFFF"
             android:gravity="center_horizontal"
             android:clickable="true"
             />
