--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#F51600"
-        android:endColor="#F51600"
+    <gradient android:startColor="#9a000000"
+        android:endColor="#9a000000"
         android:angle="270" />
     <corners android:radius="3dp" />
     <stroke android:width="5px" android:color="#ffffff" />
