--- a/app/src/main/res/layout/rent_list.xml
+++ b/app/src/main/res/layout/rent_list.xml
@@ -19,7 +19,7 @@
         android:textColor="#000000"
         android:paddingStart="10dp"
         android:drawableStart="@drawable/search"
-        android:background="@drawable/text_input_border"/>
+        android:background="#1a000000"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -31,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/text_input_border">
+            android:layout_marginTop="25dp"
+            android:background="#1a000000">
             <TextView
                 android:id="@+id/category"
                 android:textStyle="bold"
@@ -58,8 +58,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/text_input_border">
+            android:layout_marginTop="25dp"
+            android:background="#1a000000">
             <TextView
                 android:id="@+id/sort_by"
                 android:textStyle="bold"
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="2dp"
                     android:layout_toRightOf="@+id/grill_stars"
-                    android:text="26">
+                    android:text="32">
                 </TextView>
 
             </RelativeLayout>
@@ -189,7 +189,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="2dp"
                     android:layout_toRightOf="@+id/golf_stars"
-                    android:text="26">
+                    android:text="87">
                 </TextView>
             </RelativeLayout>
         </LinearLayout>
@@ -238,7 +238,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="2dp"
                     android:layout_toRightOf="@+id/drone_stars"
-                    android:text="26">
+                    android:text="19">
                 </TextView>
 
             </RelativeLayout>
