--- a/app/src/main/res/layout/activity_rent_page_two.xml
+++ b/app/src/main/res/layout/activity_rent_page_two.xml
@@ -4,39 +4,29 @@
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
     android:orientation="vertical">
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:src="@drawable/grill"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_gravity="center"
-            android:src="@drawable/grill"/>
-
-        <LinearLayout
+        android:layout_gravity="center"
+        android:orientation="vertical">
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:text="Weber Barbeque Grill"/>
-                <ImageView
-                    android:layout_width="85dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center_horizontal"
-                    android:src="@drawable/three_half_stars_"/>
-        </LinearLayout>
-
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="Weber Barbeque Grill"/>
+        <ImageView
+            android:layout_width="85dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/three_half_stars_"/>
     </LinearLayout>
 
     <LinearLayout
@@ -53,13 +43,78 @@
             android:textStyle="bold"
             android:text="Availability: November 18th - November 30th"/>
 
-        <CalendarView
-            android:id="@+id/calender"
-            android:layout_marginLeft="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="270dp"
-            android:minDate="11/18/2019"
-            />
+<!--        <CalendarView-->
+<!--            android:id="@+id/calender"-->
+<!--            android:layout_marginLeft="30dp"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="270dp"-->
+<!--            android:minDate="11/18/2019"-->
+<!--            />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
+
+            <Button
+                android:id="@+id/rent_start_date_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#F51600"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:text="Start Date"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"></Button>
+
+            <TextView
+                android:id="@+id/rent_start_date"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="fill_horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/text_input_border"
+                android:gravity="center"
+                android:text="Select A Start Date"
+                android:textSize="24sp"></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/rent_end_date_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#F51600"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:text="  End Date   "
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"></Button>
+
+            <TextView
+                android:id="@+id/rent_end_date"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="fill_horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/text_input_border"
+                android:gravity="center"
+                android:text="Select An End Date"
+                android:textSize="24sp"></TextView>
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
