--- a/app/src/main/res/layout/activity_lend_confirmation.xml
+++ b/app/src/main/res/layout/activity_lend_confirmation.xml
@@ -1,38 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_lend_confirmation"
+    android:layout_marginTop="20dp"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/check"></ImageView>
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/check"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Congrats! Your item has been added as a listing"
-        android:textSize="24sp"
         android:gravity="center"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"></TextView>
+        android:layout_marginTop="10dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:text="Congratulations! You have successfully listed this item to lend."/>
 
-    <Button
-        android:id="@+id/button_finish_listing"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:text="Please check your email for confirmation."/>
+
+    <Button
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="#F51600"
+        android:layout_marginTop="25dp"
+        android:id="@+id/rent_home_button1"
+        android:background="@drawable/button_border"
         android:text="Home"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"></Button>
+        />
+
 </LinearLayout>
