--- a/app/src/main/res/layout/activity_lend_form.xml
+++ b/app/src/main/res/layout/activity_lend_form.xml
@@ -128,15 +128,83 @@
         android:textSize="24sp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"></TextView>
-    <com.squareup.timessquare.CalendarPickerView
+<!--    <com.squareup.timessquare.CalendarPickerView-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginRight="20dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="4"-->
+<!--        android:layout_gravity="fill_vertical"-->
+<!--        android:id="@+id/calendar_grid"-->
+<!--        android:outlineAmbientShadowColor="#F51600"-->
+<!--        android:outlineSpotShadowColor="#F51600">-->
+<!--    </com.squareup.timessquare.CalendarPickerView>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
+        <Button
+            android:id="@+id/start_date_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#F51600"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="Start Date"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp"></Button>
+
+        <TextView
+            android:id="@+id/start_date"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_gravity="fill_horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/text_input_border"
+            android:gravity="center"
+            android:text="Select A Start Date"
+            android:textSize="24sp"></TextView>
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:layout_gravity="fill_vertical"
-        android:id="@+id/calendar_grid">
-    </com.squareup.timessquare.CalendarPickerView>
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/end_date_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#F51600"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="  End Date   "
+            android:textColor="#FFFFFF"
+            android:textSize="14sp"></Button>
+
+        <TextView
+            android:id="@+id/end_date"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="fill_horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/text_input_border"
+            android:gravity="center"
+            android:text="Select An End Date"
+            android:textSize="24sp"></TextView>
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/button_finish_listing"
