--- a/app/src/main/res/layout/user_page.xml
+++ b/app/src/main/res/layout/user_page.xml
@@ -2,10 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="70dp"
+    android:background="@drawable/background_gradient"
+    >
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="45dp"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
     android:orientation="vertical"
+
     android:gravity="center_horizontal"
     >
 
@@ -29,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:background="@drawable/button_border"
+        android:layout_marginBottom="10dp"
+        android:background="#4a000000"
         android:text="Messages"
         android:textColor="#FFFFFF"
         />
@@ -37,7 +45,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/button_border"
+        android:layout_marginBottom="10dp"
+
+        android:background="#4a000000"
         android:text="Items"
         android:textColor="#FFFFFF"
         />
@@ -46,7 +56,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/button_border"
+        android:layout_marginBottom="10dp"
+
+        android:background="#4a000000"
         android:text="Reviews"
         android:textColor="#FFFFFF"
         />
@@ -55,7 +67,8 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/button_border"
+        android:layout_marginBottom="10dp"
+        android:background="#4a000000"
         android:text="Ratings"
         android:textColor="#FFFFFF"
         />
@@ -64,7 +77,8 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/button_border"
+        android:layout_marginBottom="10dp"
+        android:background="#4a000000"
         android:text="Transactions"
         android:textColor="#FFFFFF"
         />
@@ -73,8 +87,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/button_border"
+        android:background="#4a000000"
         android:text="Likes"
         android:textColor="#FFFFFF"
         />
+    </LinearLayout>
 </LinearLayout>
