--- a/app/src/main/res/layout/activity_lend_confirmation.xml
+++ b/app/src/main/res/layout/activity_lend_confirmation.xml
@@ -5,8 +5,8 @@
     android:layout_marginTop="20dp"
     android:orientation="vertical"
     android:gravity="center"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:background="@drawable/background_gradient"
+    >
 
     <ImageView
         android:layout_width="125dp"
@@ -39,7 +39,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="25dp"
         android:id="@+id/rent_home_button1"
-        android:background="@drawable/button_border"
+        android:background="#4a000000"
         android:text="Home"
         android:textColor="#FFFFFF"
         />
