Add Background gradient. Change Button Color

--- a/app/src/main/res/drawable/text_input_border.xml
+++ b/app/src/main/res/drawable/text_input_border.xml
@@ -3,7 +3,7 @@
 android:shape="rectangle">
 <stroke
     android:width="2dp"
-    android:color="#F51600"
+    android:color="#000000"
     android:height="10dp"/>
 
 <corners
