--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/text_input_border">
+    android:background="@drawable/text_input_border"
+    android:layout_marginBottom="20dp">
 
     <ImageView
         android:id="@+id/ivimages"
@@ -22,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_toEndOf="@id/ivimages"
         android:layout_toRightOf="@id/ivimages"
-        android:textColor="#F51600"
+        android:textColor="#000000"
         android:textSize="18sp" />
 
     <TextView
