--- a/app/src/main/res/layout/activity_lend_confirmation.xml
+++ b/app/src/main/res/layout/activity_lend_confirmation.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="10dp"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="#FFFFFF"
         android:text="Congratulations! You have successfully listed this item to lend."/>
 
     <TextView
@@ -30,6 +31,7 @@
         android:layout_marginTop="10dp"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="#FFFFFF"
         android:text="Please check your email for confirmation."/>
 
     <Button
