--- a/app/src/main/res/layout/activity_rent_page_two.xml
+++ b/app/src/main/res/layout/activity_rent_page_two.xml
@@ -65,23 +65,22 @@
 
             <Button
                 android:id="@+id/rent_start_date_button"
-                android:layout_width="wrap_content"
+                android:layout_width="117dp"
                 android:layout_height="wrap_content"
                 android:background="#7a000000"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:text="Start Date"
                 android:textColor="#FFFFFF"
-
+                android:textStyle="bold"
                 android:textSize="14sp"></Button>
 
             <TextView
                 android:id="@+id/rent_start_date"
-                android:layout_width="0dp"
+                android:layout_width="220dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="fill_horizontal"
                 android:layout_marginLeft="20dp"
-                android:layout_weight="1"
                 android:background="#2a000000"
                 android:gravity="center"
                 android:text="Select A Start Date"
@@ -94,27 +93,26 @@
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center">
+            android:layout_marginBottom="10dp">
 
             <Button
                 android:id="@+id/rent_end_date_button"
-                android:layout_width="wrap_content"
+                android:layout_width="117dp"
                 android:layout_height="wrap_content"
                 android:background="#7a000000"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
-                android:text="  End Date   "
+                android:text= "End Date"
                 android:textColor="#FFFFFF"
+                android:textStyle="bold"
                 android:textSize="14sp"></Button>
 
             <TextView
                 android:id="@+id/rent_end_date"
-                android:layout_width="0dp"
+                android:layout_width="220dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="fill_horizontal"
                 android:layout_marginLeft="20dp"
-                android:layout_weight="1"
                 android:background="#2a000000"
                 android:gravity="center"
                 android:text="Select An End Date"
@@ -149,6 +147,7 @@
             android:background="#7a000000"
             android:text="Rental Policy"
             android:textColor="#FFFFFF"
+            android:textStyle="bold"
             />
         <Button
             android:id="@+id/owner_info"
@@ -159,6 +158,7 @@
             android:background="#7a000000"
             android:text="Owner Information"
             android:textColor="#FFFFFF"
+            android:textStyle="bold"
             />
         <Button
             android:id="@+id/reserve_button"
@@ -168,6 +168,7 @@
             android:background="#7a000000"
             android:text="Reserve"
             android:textColor="#FFFFFF"
+            android:textStyle="bold"
             />
 
     </LinearLayout>
