--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:layout_toEndOf="@id/ivimages"
         android:layout_toRightOf="@id/ivimages"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -33,5 +33,6 @@
         android:layout_below="@id/tvitems"
         android:layout_toEndOf="@id/ivimages"
         android:layout_toRightOf="@id/ivimages"
+        android:textColor="#FFFFFF"
         android:textSize="14sp" />
 </RelativeLayout>
