--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="20dp"
     android:background="@drawable/background_gradient"
     android:orientation="vertical">
 
@@ -15,7 +14,7 @@
         android:fontFamily="sans-serif-thin"
         android:textSize="80sp"
         android:textStyle="bold"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:gravity="center_horizontal" />
 
     <RelativeLayout
@@ -30,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="First Name :"
             android:textSize="20sp"
-            android:textColor="#000000"/>
+            android:textColor="#FFFFFF"/>
         <EditText
             android:id="@+id/first_name"
             android:layout_width="match_parent"
@@ -53,7 +52,7 @@
             android:layout_below="@id/first_name"
             android:text="Last Name :"
             android:textSize="20sp"
-            android:textColor="#000000"/>
+            android:textColor="#FFFFFF"/>
         <EditText
             android:id="@+id/last_name"
             android:layout_width="match_parent"
@@ -76,7 +75,7 @@
             android:layout_below="@id/last_name"
             android:text="Email :"
             android:textSize="20sp"
-            android:textColor="#000000"/>
+            android:textColor="#FFFFFF"/>
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -99,7 +98,7 @@
             android:layout_below="@id/email"
             android:text="Password :"
             android:textSize="20sp"
-            android:textColor="#000000"/>
+            android:textColor="#FFFFFF"/>
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
