--- a/app/src/main/res/layout/rent_list.xml
+++ b/app/src/main/res/layout/rent_list.xml
@@ -35,24 +35,13 @@
             android:background="#1a000000">
 
 
-            <TextView
-                android:id="@+id/category"
-                android:textStyle="bold"
+            <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:text="Category"/>
+                android:id="@+id/category_spinner"/>
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/drop_down"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"/>
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -62,24 +51,16 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="25dp"
             android:background="#1a000000">
-            <TextView
-                android:id="@+id/sort_by"
-                android:textStyle="bold"
+
+
+
+
+            <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="20dp"
-                android:text="Sort By"/>
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/drop_down"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"/>
+                android:id="@+id/sort_spinner"/>
+
+
 
         </LinearLayout>
 
