--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/text_input_border"
+    android:background="@drawable/lend_layout_box"
+    android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp">
+
+    <!--    android:background="@drawable/text_input_border"-->
 
     <ImageView
         android:id="@+id/ivimages"
